@@ -36,7 +36,7 @@ Files=clusterupdater.h/libclusterupdaters.h/messages.h/neuralnet.h/nnfw.h/random
 
 [Dir src]
 Dirs=
-Files=libclusterupdaters.cpp/messages.cpp/neuralnet.cpp/random.cpp/types.cpp/fakecluster.cpp/simplecluster.cpp/copylinker.cpp/matrixlinker.cpp/clusterupdater.cpp/blockslearning.cpp/learningnetwork.cpp/utils.cpp/biasedcluster.cpp/cluster.cpp/realvec.cpp/sparsematrixlinker.cpp/realmat.cpp/ddecluster.cpp/nnfwfactory.cpp
+Files=libclusterupdaters.cpp/messages.cpp/neuralnet.cpp/random.cpp/types.cpp/fakecluster.cpp/simplecluster.cpp/copylinker.cpp/matrixlinker.cpp/clusterupdater.cpp/blockslearning.cpp/learningnetwork.cpp/utils.cpp/biasedcluster.cpp/cluster.cpp/realvec.cpp/sparsematrixlinker.cpp/realmat.cpp/ddecluster.cpp/nnfwfactory.cpp/propertized.cpp
 
 [Dir tests]
 Dirs=test1/test2/test3/test4/test5/test6
